# big

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  test.yml
big/: __init__.py  all.py  boundinnerclass.py  builtin.py  deprecated.py  file.py  graph.py  heap.py  itertools.py  log.py  metadata.py  scheduler.py  state.py  template.py  text.py  time.py  tokens.py  types.py  version.py
resources/experiments/: time_multisplit.py
resources/test_inputs/: file_ending_with_comment.py
resources/unicode/: parse_ucd_xml.py
test/: bigtestlib.py  grepfile  test_all.py  test_boundinnerclass.py  test_builtin.py  test_file.py  test_graph.py  test_heap.py  test_itertools.py  test_scheduler.py  test_text.py  test_time.py
tests/: bigtestlib.py  test_all.py  test_bigtestlib.py  test_boundinnerclass.py  test_builtin.py  test_deprecated.py  test_file.py  test_graph.py  test_heap.py  test_itertools.py  test_log.py  test_metadata.py  test_scheduler.py  test_state.py  test_template.py  test_text.py  test_time.py  test_tokens.py  test_types.py  test_version.py
tests/test_encodings/: ascii_source_code_encoding.py  gb18030_bom.py  invalid_conflicting_bom_and_source_code_encoding.py  invalid_source_code_encoding.py  invalid_utf-1_bom.py  utf-7_bom.py  utf-7_source_code_encoding.py  utf-8_source_code_encoding.py  utf16_bom.py  utf7_source_code_encoding.py
x/: types.py
