[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "big"
authors = [
    {name="Larry Hastings", email="larry@hastings.org"},
    ]
readme = "README.md"
requires-python = ">=3.6"

classifiers = [
    "Intended Audience :: Developers",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    ]
dynamic = [
    "description",
    "version",
    ]

[project.urls]
Source = "https://github.com/larryhastings/big/"

[project.optional-dependencies]
time = [
    "python-dateutil",
    ]
test = [
    "regex",
    ]
