[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "big"
authors = [
    {name="Larry Hastings", email="larry@hastings.org"},
    ]
readme = "README.md"
requires-python = ">=3.6"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    ]
dynamic = [
    "description",
    "version",
    ]

[project.urls]
Source = "https://github.com/larryhastings/big/"

[project.optional-dependencies]
time = [
    "python-dateutil",
    ]
test = [
    "python-dateutil",
    "regex",
    "inflect",
    ]
